--- a/elastic.in
+++ b/elastic.in
@@ -1,18 +1,29 @@
 11Be on 9Be elastic scattering at 30.14 MeV
 NAMELIST
- &FRESCO hcm=0.1 rmatch=60 
-	 jtmin=0.0 jtmax=50 absend= 0.0010 
-	 thmin=10.00 thmax=180.00 thinc=1.00 
- 	 chans=1 smats=2  xstabl=1 
-	 elab(1:3)=30.14 55 0  nlab(1:3)=1 1 /
+ &FRESCO hcm=0.1 rmatch=60 jtmin=0.0 
+	 jtmax=50 absend=0.0010 thmin=10.00 
+	 thmax=180.00 thinc=1.00 chans=1 
+	 smats=2  xstabl=1 
+	 elab(1:1)= 30.14 nlab(1:1)= 1
+	  /
 
  &PARTITION namep='11Be' massp=11.021661 zp=4 
- 	    namet='9Be' masst=9.012183 zt=4 qval=-0.000 nex=1  /
- &STATES jp=0.5 bandp=1 ep=0.0000 cpot=1 jt=1.5 bandt=-1 et=0.0000  /
+	 namet='9Be' masst=9.012183 zt=4 qval=-0.000 
+	 nex=1  /
+ &STATES jp=0.5 bandp=1 cpot=1 jt=1.5 
+	 bandt=-1  /
+
  &partition /
  
  &POT kp=1 ap=11.021661 at=9.012183 rc=1.2  /
- &POT kp=1 type=1 p1=40.00 p2=1.2 p3=0.65 p4=10.0 p5=1.2 p6=0.500  /
+ &POT kp=1 type=1  shape=0  p1=94 p2=1.2 
+	 p3=.6 p4=20 p5=1.5 p6=.2  /
  &pot / 
+ 
  &overlap / 
+ 
  &coupling / 
+ 
+Output code for fresco input written by xfresco version 2.1
+ at Wed May 15 14:34:31 2019
+ 
