--- a/transfer.in
+++ b/transfer.in
@@ -2,70 +2,81 @@ Be11(Be9,Be10)Be10 @ 30.14 MeV Ex0;
 NAMELIST
  &FRESCO hcm=0.1 rmatch=60 rintp=0.20 hnl=0.1 rnl=7.00 centre=0.0
 	 jtmin=0.0 jtmax=20 absend=0.0010
-	 thmin=0.00 thmax=-180.00 thinc=1.00 
+	 thmin=0.00 thmax=-180.00 thinc=1.00
 	 iter=2 iblock=0 nnu=36
  	 chans=1 xstabl=1 listcc=2 TRENEG=0 smats=2
-	 elab= 109.23 lin = 1  /
+	 elab= 30.14 lin = 1  /
+#The above block is copied from Keri Kuhn's Be11(p,d)Be10 at 109 MeV, aside from adjustments due to the different reaction and energy
+
+&PARTITION namep='be11' massp=11.0 zp=4 namet='be9' masst=9.0 zt=4 nex=1 qval=0.0 /
+&STATES jp=0.5 bandp= 1 ep=0     cpot=1 jt=1.5 bandt=-1 et=0 /    #GS and GS
+#For minimum working example, I disable all other states but the ground state for now.
+
+#&STATES jp=0.5 bandp=-1 ep=0.320 cpot=1 copyt=1 /                 #Excite1 and GS
+#&STATES jp=2.5 bandp= 1 ep=1.783 cpot=1 copyt=1 /                 #Excite2 and GS
+
+#&STATES jp=0.5 bandp= 1 ep=0     cpot=1 jt=0.5 bandt= 1 et=1.684/ #GS and Excite1
+#&STATES copyp=1                  cpot=1 jt=2.5 bandt=-1 et=2.429/ #GS and Excite2
+#I do not model any channels with two excitations.  Since the beam and target are both initially in the ground state, this seems excessive.
 
 
-&PARTITION namep='be11' massp=11.0 zp=4 namet='be9' masst=9.0 zt=4 nex=3 qval=0.0 /
-&STATES jp=0.5 bandp=1 ep=0 cpot=1 jt=0.5 bandt=1 et=0 /
-&STATES jp=0.5 bandp=-1 ep=0.320 cpot=1 copyt=1 /
-&STATES jp=2.5 bandp=1 ep=1.783 cpot=1 copyt=1 /
+&PARTITION namep='be10BeamLike' massp=10.0 zp=4 namet='be10TargetLike' masst=10 zt=4 nex=2 qval=6.310 /
+&STATES jp=0 bandp= 1 ep=0       cpot=2 jt=0 bandt= 1 et=0 / #GS and GS
 
-&PARTITION namep='be10A' massp=10.0 zp=4 namet='be10B' masst=10 zt=4 nex=4 qval=1.722 /
-&STATES jp=0 bandp=1 ep=0      cpot=2 jt=1 bandt=1 et=0 /
-&STATES jp=2 bandp=1 ep=5.95839  cpot=2 copyt=1 /
-&STATES jp=1 bandp=-1 ep=5.9599  cpot=2 copyt=1 /
-&STATES jp=2 bandp=-1 ep=6.2633  cpot=2 copyt=1 /
+#I am assuming that the Beam-like is left in the ground state.
+#&STATES jp=2 bandp= 1 ep=5.958   cpot=2 copyt=1 / #5958 2+ and GS
+#&STATES jp=1 bandp=-1 ep=5.959   cpot=2 copyt=1 / #5959 1- and GS
+#&STATES jp=2 bandp=-1 ep=6.263   cpot=2 copyt=1 / #6263 2- and GS
+
+#Minimum working example only has the state of primary interest.
+
+#&STATES jp=0 bandp= 1 ep=0       cpot=2 jt=2 bandt= 1 et=5.958 / #GS and 5958
+&STATES  jp=0 bandp= 1 ep=0       cpot=2 jt=1 bandt=-1 et=5.959 / #GS and 5959
+#&STATES copyp = 1                cpot=2 jt=2 bandt=-1 et=6.263 / #GS and 6263
 &partition /
+#The 3368 keV 2+ state is not modeled because it is not a single-particle state.
 
-
-# incoming scattering 11Be+p (kp=1)
-&POT kp=1 type=0 shape=0 p(1:3)= 11.0 0.0 1.136 /   #R = r(Ap^1/3+At^1/3) Ap is the core nucleus (projectile)
-&POT kp=1 type=1 p(1:6)= 30.7377 1.3 0.50 2.0 1.404 0.69  /    #Volume type potential
+# incoming scattering 11Be+9Be (kp=1) (This is taken from our fits on elastic scattering)  This is questionable right now, external input needed.  Only the type 1 is fit all other values taken from references.
+&POT kp=1 type=0 shape=0 p(1:3)= 11.0 0.0 1.136 /
+&POT kp=1 type=1 p(1:6)= 35.15 1.15 0.85 3.50 1.44 0.88  /    #Dont forget to update kp4
 &POT kp=1 type=10 itt=F p1=1.67 p2=2.5/
-&POT kp=1 type=2 p(1:6)= 0.0 0.0 0.0 2.305 1.3 0.5  /     #Surface type potential
+&POT kp=1 type=2 p(1:6)= 0.0 0.0 0.0 6.8 1.29 0.71  /
 &POT kp=1 type=10 itt=F p1=1.67 p2=2.5/
+&POT kp=1 type=3 p1=6.47  p2=1.16 p3=0.51   /
 
-# outgoing scattering 10Be+d (kp=2)
+# outgoing scattering 10Be+10Be (kp=2) # https://journals.aps.org/prc/pdf/10.1103/PhysRevC.84.034611 SEE WS-6
 &POT kp=2 type=0 shape=0 p(1:3)= 10.0 0.0 1.136 /
-&POT kp=2 type=1 shape=0 p(1:6)= 89  1.2  0.77    0.0  1.6  0.79  /
-&POT kp=2 type=2 shape=0 p(1:6)= 0.0  0.00  0.00   20.3  1.35  0.62  /
-&POT kp=2 type=3 shape=0 p(1:6)= 9  1.2  0.45    0.0  0.00  0.00  /
+&POT kp=2 type=1 shape=0 p(1:6)= 32.35  .89  0.85  5.77  1.37  0.36  /
 
-# deuteron potential n+p (kp=3) 
-&POT kp=3 type=0 shape=0 p(1:3)= 1.0 0.0 1.136 /
-&POT kp=3 type=1 shape=0 p(1:6)= 72.15 1.238 0.484 0.0 1.238 0.51  /
+# n+9Be (kp=3)
+#https://www-nds.iaea.org/cgi-bin/ripl_om_param.pl?Z=6&A=12&ID=15&E1=30&E2=31
+&POT kp=3 type=0 shape=0 p(1:3)= 9.0 0.0 1.136 /
+&POT kp=3 type=1 shape=0 p(1:6)= 37.4 1.23 0.60 0.0 0.0 0.0  /
+&POT kp=3 type=2 p(1:6)= 0.0 0.0 0.0 6.8 1.23 1.20  /
+&POT kp=3 type=3 shape=0 p(1:6)= 7.0  1.23  0.60 0.0  0.00  0.00  /
 
-# neutron hole state 11Be+hole (kp=4)
-&POT kp=4 type=1 p(1:6)= 30.7377 3.834 0.50 2.0 3.122 0.69  / #I will be (maybe) changing 1.25 and 0.65
+# neutron hole state 11Be+hole (kp=4) #This is a copy of kp1, just modified type 10 to type 11.  Type 1 and 2 don't seem to care if they are target or projectile like type 10 -> 11 does.
+&POT kp=4 type=1 p(1:6)= 35.15 1.15 0.85 3.50 1.44 0.88  /
 &POT kp=4 type=11 itt=F p1=1.67 p2=2.5/
-&POT kp=4 type=2 p(1:6)= 0.0 0.0 0.0 2.305 4.023 0.5   /
+&POT kp=4 type=2 p(1:6)= 0.0 0.0 0.0 6.8 1.29 0.71  /
 &POT kp=4 type=11 itt=F p1=1.67 p2=2.5/
+&POT kp=4 type=3 p1=6.47  p2=1.16 p3=0.51   /
 &pot /
 
-
-&OVERLAP kn1=1 kn2=1 ic1=1 ic2=2 in=1 kind=0 nn=1 l=0 j=0.5 sn=0.5 kbpot=4  ia=1 ib=1 be=0.501 isc=1 ipc=0 /
-&OVERLAP kn1=2 kn2=2 ic1=1 ic2=2 in=1 kind=0 nn=1 l=1 j=1.5 sn=0.5 ia=2 ib=2 kbpot=4 be=6.4595 isc=1 ipc=0 /
-&OVERLAP kn1=3 kn2=3 ic1=1 ic2=2 in=1 kind=0 nn=1 l=1 j=1.5  sn=0.5 ia=3 ib=1 kbpot=4 be=6.4609 isc=1 ipc=0 /
-&OVERLAP kn1=3 kn2=3 ic1=1 ic2=2 in=1 kind=0 nn=1 l=1 j=1.5  sn=0.5 ia=3 ib=3 kbpot=4 be=6.4609 isc=1 ipc=0 /
-&OVERLAP kn1=4 kn2=4 ic1=1 ic2=2 in=1 kind=0 nn=1 l=1 j=1.5 sn=0.5 ia=4 ib=1 kbpot=4 be=6.7643 isc=1 ipc=0 /
-&OVERLAP kn1=5 kn2=5 ic1=1 ic2=2 in=1 kind=0 nn=1 l=1 j=1.5 sn=0.5 ia=4 ib=3 kbpot=4 be=6.7643 isc=1 ipc=0 /
-&OVERLAP kn1=6 kn2=6 ic1=1 ic2=2 in=2 kind=0 nn=1 l=0 j=0.5 sn=0.5 kbpot=3 be=2.226  isc=1 ipc=0 /
+#The overlap lines give possible paths to populate the final states
+&OVERLAP kn1=1 kn2=1 ic1=1 ic2=2 in=1 kind=0 nn=1 l=1 j=1.5 sn=0.5 kbpot=4  ia=1 ib=1 be=0.501 isc=1 ipc=0 /
+# ^^^ 11Be GS -> 10Be GS via neutron hole (kp=4)
+&OVERLAP kn1=2 kn2=2 ic1=1 ic2=2 in=1 kind=0 nn=1 l=0 j=0.5 sn=0.5 ia=1 ib=2 kbpot=4 be=6.4609 isc=1 ipc=0 /
+# ^^^ 11Be GS -> 10Be 5959 1- via neutron hole (kp=4)
+&OVERLAP kn1=3 kn2=3 ic1=1 ic2=2 in=2 kind=0 nn=1 l=0 j=0.5 sn=0.5 kbpot=3 be=2.165  isc=1 ipc=0 /
+# ^^^ creates a path to the other 10Be?  I am not sure what this does exactly, but Keri indicated it is required.  In her case it was the deuteron.
 &overlap /
 
 &COUPLING icto=-2 icfrom=1 kind=7 ip1=1 ip2=0 /
 &CFP in=1 ib=1 ia=1 kn=1 a=1.0 /
-&CFP in=1 ib=2 ia=2 kn=2 a=3.7 /
-&CFP in=1 ib=1 ia=3 kn=3 a=0.7 /
-&CFP in=1 ib=3 ia=3 kn=3 a=0.3/
-&CFP in=1 ib=1 ia=4 kn=4 a=1.20 /
-&CFP in=1 ib=3 ia=4 kn=5 a=0.0 /
-&CFP in=2 ib=1 ia=1 kn=6 a=1.0 /
+#The above line uses a transfer coupling for the first overlap (kn=1) creating the 10Be ground state using the 11Be ground state (ib=1) to get to the ground state of 10Be (ia=1)
+&CFP in=1 ib=1 ia=2 kn=2 a=1.0 /
+#The above line uses a transfer coupling for the third overlap (kn=3) creating the 10Be 1- state using the 11Be ground state (ib=1) to get to the 1- single particle hole state of 10Be (ia=3), the spectroscopic amplitude is 0.63 and scales the final calculation
+&CFP in=2 ib=1 ia=1 kn=3 a=1.0 /
+#The above line uses a transfer coupling to create the other 10Be, This is like the last overlap section.  I am unsure as to the purpose, but Keri indicates that it is required.
 &coupling /
-
-
-
-
-
