--- a/elastic.in
+++ b/elastic.in
@@ -14,7 +14,7 @@ NAMELIST
 &partition /
 
 &POT kp=1 type=0 shape=0 ap=11.021661 at=9.012183 rc=1.2  /
-&POT kp=1 type=1 p1=19.57 p=1.3 p3=.65 p4=1 p5=2 p6=.6  /
+&POT kp=1 type=1 p1=19.57 p=1.3 p3=.65 p4=0 p5=0 p6=0  /
 &POT kp=1 type=2 p(1:6)= 0.0 0.0 0.0 6.8 1.29 0.71  /
 &POT kp=1 type=3 p1=6.47  p2=1.16 p3=0.51   /
 &pot /
