--- a/transfer.in
+++ b/transfer.in
@@ -7,20 +7,17 @@ NAMELIST
  	 chans=1 xstabl=1 listcc=2 TRENEG=0 smats=2
 	 elab= 30.14 lin = 1  /
 
-&PARTITION namep='11Be' massp=11.0216608 zp=4 namet='9Be' masst=9.01218319 zt=4 nex=2 qval=0.0 /
+&PARTITION namep='11Be' massp=11.0216608 zp=4 namet='9Be' masst=9.01218319 zt=4 nex=1 qval=0.0 /
 &STATES jp=0.5 bandp= 1 ep=0     cpot=1 jt=1.5 bandt=-1 et=0 /    #GS and GS
-&STATES jp=0.5 bandp=-1 ep=0.320 cpot=1 copyt=1 /                 #Excite1 and GS
 
-&PARTITION namep='10Be_BeamLike' massp=10.01353455 zp=4 namet='10Be_TargetLike' masst=10.01353455 zt=4 nex=4 qval=6.31 /
+&PARTITION namep='10Be_BeamLike' massp=10.01353455 zp=4 namet='10Be_TargetLike' masst=10.01353455 zt=4 nex=3 qval=6.31 /
 &STATES jp=0 bandp= 1 ep=0       cpot=2 jt=0 bandt= 1 et=0 / #GS and GS
-
 &STATES copyp = 1                cpot=2 jt=2 bandt= 1 et=5.958 / #GS and 5958
 &STATES copyp = 1                cpot=2 jt=1 bandt=-1 et=5.959 / #GS and 5959
-&STATES copyp = 1                cpot=2 jt=2 bandt=-1 et=6.263 / #GS and 6263
 &partition /
 
 &POT kp=1 type=0 shape=0 p(1:3)= 11.0 9.0 1.136 /
-&POT kp=1 type=1 p(1:6)= 35.15 1.15 0.85 3.50 1.44 0.88  /    #Dont forget to update kp4
+&POT kp=1 type=1 p(1:6)= 35.15 1.15 0.85 0 0 /    #Dont forget to update kp4
 &POT kp=1 type=2 p(1:6)= 0.0 0.0 0.0 6.8 1.29 0.71  /
 &POT kp=1 type=3 p1=6.47  p2=1.16 p3=0.51   /
 
@@ -38,17 +35,12 @@ NAMELIST
 &POT kp=3 type=2 p(1:6)= 0.0 0.0 0.0 6.8 1.23 1.20  /
 &POT kp=3 type=3 shape=0 p(1:6)= 7.0  1.23  0.60 0.0  0.00  0.00  /
 
-# neutron hole state 11Be+hole (kp=4) #This is a copy of kp1, just modified type 10 to type 11.  Type 1 and 2 don't seem to care if they are target or projectile like type 10 -> 11 does.
-&POT kp=4 type=1 p(1:6)= 35.15 1.15 0.85 3.50 1.44 0.88  /
-&POT kp=4 type=2 p(1:6)= 0.0 0.0 0.0 6.8 1.29 0.71  /
-&POT kp=4 type=3 p1=6.47  p2=1.16 p3=0.51   /
+&POT kp=4 type=1 p(1:6)= 35.15 1.15 0.85 0 0 0  /
 &pot /
 
-#The overlap lines give possible paths to populate the final states
 &OVERLAP kn1=1 ic1=1 ic2=2 in=1 kind=0 nn=2 l=0 j=0.5 sn=0.5 kbpot=4 be=0.501 isc=1 ipc=0 /
-&OVERLAP kn1=2 ic1=1 ic2=2 in=2 kind=0 nn=2 l=0 j=0.5 sn=0.5 kbpot=4 be=.853 isc=1 ipc=0 /
-#todo: need to convert to kind=3 to take into account the spin of the 9Be
-&OVERLAP kn1=3 ic1=1 ic2=2 in=2 kind=0 nn=2 l=0 j=0.5 sn=0.5 kbpot=4 be=.852 isc=1 ipc=0 /
+&OVERLAP kn1=2 ic1=1 ic2=2 in=2 kind=3 ia=1 ib=2 nn=2 l=0 j=0.5 sn=0.5 kbpot=4 be=.853 isc=1 ipc=0 /
+&OVERLAP kn1=3 ic1=1 ic2=2 in=2 kind=3 ia=1 ib=3 nn=2 l=0 j=0.5 sn=0.5 kbpot=4 be=.852 isc=1 ipc=0 /
 &overlap /
 
 &COUPLING icto=-2 icfrom=1 kind=7 ip1=1 ip2=0 /
