--- a/transfer.in
+++ b/transfer.in
@@ -11,9 +11,9 @@ NAMELIST
 &STATES jp=0.5 bandp= 1 ep=0     cpot=1 jt=1.5 bandt=-1 et=0 /    #GS and GS
 
 &PARTITION namep='10Be_BeamLike' massp=10.01353455 zp=4 namet='10Be_TargetLike' masst=10.01353455 zt=4 nex=3 qval=6.31 /
-&STATES jp=0 bandp= 1 ep=0       cpot=2 jt=0 bandt= 1 et=0 / #GS and GS
-&STATES copyp = 1                cpot=2 jt=2 bandt= 1 et=5.958 / #GS and 5958
-&STATES copyp = 1                cpot=2 jt=1 bandt=-1 et=5.959 / #GS and 5959
+&STATES jp=0 bandp= 1 ep=0       cpot=2 jt=0 bandt= 1 et=0 /
+&STATES copyp = 1                cpot=2 jt=1 bandt=-1 et=5.959 /
+&STATES copyp = 1                cpot=2 jt=2 bandt=-1 et=6.263 /
 &partition /
 
 &POT kp=1 type=0 shape=0 p(1:3)= 11.0 9.0 1.136 /
@@ -40,7 +40,7 @@ NAMELIST
 
 &OVERLAP kn1=1 ic1=1 ic2=2 in=1 kind=0 nn=2 l=0 j=0.5 sn=0.5 kbpot=4 be=0.501 isc=1 ipc=0 /
 &OVERLAP kn1=2 ic1=1 ic2=2 in=2 kind=3 ia=1 ib=2 nn=2 l=0 j=0.5 sn=0.5 kbpot=4 be=.853 isc=1 ipc=0 /
-&OVERLAP kn1=3 ic1=1 ic2=2 in=2 kind=3 ia=1 ib=3 nn=2 l=0 j=0.5 sn=0.5 kbpot=4 be=.852 isc=1 ipc=0 /
+&OVERLAP kn1=3 ic1=1 ic2=2 in=2 kind=3 ia=1 ib=3 nn=2 l=0 j=0.5 sn=0.5 kbpot=4 be=.549 isc=1 ipc=0 /
 &overlap /
 
 &COUPLING icto=-2 icfrom=1 kind=7 ip1=1 ip2=0 /
