--- a/transfer.in
+++ b/transfer.in
@@ -17,10 +17,10 @@ NAMELIST
 &STATES copyp = 1                cpot=2 jt=2 bandt=-1 et=6.263 /
 &partition /
 
-&POT kp=1 type=0 shape=0 p(1:3)= 11.0 9.0 1.136 /
-&POT kp=1 type=1 p(1:6)= 35.15 1.15 0.85 0 0 /    #Dont forget to update kp4
-&POT kp=1 type=2 p(1:6)= 0.0 0.0 0.0 6.8 1.29 0.71  /
-&POT kp=1 type=3 p1=6.47  p2=1.16 p3=0.51   /
+&POT kp=1 type=0 shape=0 ap=11.021661 at=9.012183 rc=1.1555  /
+&POT kp=1 type=1 p1=45.559 p=1.191 p3=0.56288 p4=0 p5=0 p6=0  /
+&POT kp=1 type=2 p(1:6)= 0.0 0.0 0.0 6.485 1.046 1.1883  /
+&POT kp=1 type=3 p1=6.47  p2=1.15 p3=0.633   /
 
 # outgoing scattering 10Be+10Be (kp=2)
 # derived from 12C+10Be elastic scattering at 23.2 MeV
@@ -36,7 +36,9 @@ NAMELIST
 &POT kp=3 type=2 p(1:6)= 0.0 0.0 0.0 6.8 1.23 1.20  /
 &POT kp=3 type=3 shape=0 p(1:6)= 7.0  1.23  0.60 0.0  0.00  0.00  /
 
-&POT kp=4 type=1 p(1:6)= 35.15 1.15 0.85 0 0 0  /
+&POT kp=1 type=0 shape=0 ap=11.021661 at=9.012183 rc=1.1555  /
+&POT kp=1 type=1 p1=45.559 p=1.191 p3=0.56288 p4=0 p5=0 p6=0  /
+&POT kp=1 type=3 p1=6.47  p2=1.15 p3=0.633   /
 &pot /
 
 &OVERLAP kn1=1 ic1=1 ic2=2 in=1 kind=0 nn=2 l=0 j=0.5 sn=0.5 kbpot=4 be=0.501 isc=1 ipc=0 /
