--- a/transfer.in
+++ b/transfer.in
@@ -1,8 +1,8 @@
 Be11(Be9,Be10)Be10 @ 30.14 MeV Ex0;
 NAMELIST
- &FRESCO hcm=0.1 rmatch=60 rintp=0.10 hnl=0.1 rnl=7.00 centre=0.
+ &FRESCO hcm=0.1 rmatch=60 rintp=0.10 hnl=0.1 rnl=7.00 centre=-.6
 	 jtmin=0.0 jtmax=20 absend=0.0010
-	 thmin=5.00 thmax=-180.00 thinc=1.00
+	 thmin=1.00 thmax=-180.00 thinc=.1
 	 iter=1 iblock=0 nnu=36
  	 chans=1 xstabl=1 listcc=2 TRENEG=0 smats=2
 	 elab= 30.14 lin = 1  /
@@ -10,10 +10,11 @@ NAMELIST
 &PARTITION namep='11Be' massp=11.0216608 zp=4 namet='9Be' masst=9.01218319 zt=4 nex=1 qval=0.0 /
 &STATES jp=0.5 bandp= 1 ep=0     cpot=1 jt=1.5 bandt=-1 et=0 /    #GS and GS
 
-&PARTITION namep='10Be_BeamLike' massp=10.01353455 zp=4 namet='10Be_TargetLike' masst=10.01353455 zt=4 nex=3 qval=6.31 /
+&PARTITION namep='10Be_BeamLike' massp=10.01353455 zp=4 namet='10Be_TargetLike' masst=10.01353455 zt=4 nex=4 qval=6.31 /
 &STATES jp=0 bandp= 1 ep=0       cpot=2 jt=0 bandt= 1 et=0 /
 &STATES copyp = 1                cpot=2 jt=1 bandt=-1 et=5.959 /
 &STATES copyp = 1                cpot=2 jt=2 bandt=-1 et=6.263 /
+&STATES copyp = 1                cpot=2 jt=2 bandt= 1 et=5.958 /
 &partition /
 
 &POT kp=1 type=0 shape=0 ap=11.021661 at=9.012183 rc=1.1555  /
@@ -35,18 +36,20 @@ NAMELIST
 &POT kp=3 type=2 p(1:6)= 0.0 0.0 0.0 6.8 1.23 1.20  /
 &POT kp=3 type=3 shape=0 p(1:6)= 7.0  1.23  0.60 0.0  0.00  0.00  /
 
-&POT kp=1 type=0 shape=0 ap=11.021661 at=9.012183 rc=1.1555  /
-&POT kp=1 type=1 p1=45.559 p2=1.191 p3=0.56288 p4=0 p5=0 p6=0  /
-&POT kp=1 type=3 p1=6.47  p2=1.15 p3=0.633   /
+&POT kp=4 type=0 shape=0 ap=11.021661 at=9.012183 rc=1.1555  /
+&POT kp=4 type=1 p1=45.559 p2=1.191 p3=0.56288 p4=0 p5=0 p6=0  /
+&POT kp=4 type=3 p1=6.47  p2=1.15 p3=0.633   /
 &pot /
 
 &OVERLAP kn1=1 ic1=1 ic2=2 in=1 kind=0 nn=2 l=0 j=0.5 sn=0.5 kbpot=4 be=0.501 isc=1 ipc=0 /
 &OVERLAP kn1=2 ic1=1 ic2=2 in=2 kind=3 ia=1 ib=2 nn=2 l=0 j=0.5 sn=0.5 kbpot=4 be=.853 isc=1 ipc=0 /
 &OVERLAP kn1=3 ic1=1 ic2=2 in=2 kind=3 ia=1 ib=3 nn=2 l=0 j=0.5 sn=0.5 kbpot=4 be=.549 isc=1 ipc=0 /
+&OVERLAP kn1=4 kn2=5 ic1=1 ic2=2 in=2 kind=3 ia=1 ib=4 nn=1 l=1 j=1.5 sn=0.5 kbpot=4 be=.854 isc=1 ipc=0 /
 &overlap /
 
 &COUPLING icto=-2 icfrom=1 kind=7 ip1=1 ip2=0 /
 &CFP in=1 ia=1 ib=1 kn=1 a=1.0 /
 &CFP in=2 ia=1 ib=2 kn=2 a=1.0 /
 &CFP in=2 ia=1 ib=3 kn=3 a=1.0 /
+&CFP in=2 ia=1 ib=4 kn=4 a=1.0 /
 &coupling /
