--- a/transfer.in
+++ b/transfer.in
@@ -48,8 +48,8 @@ NAMELIST
 &overlap /
 
 &COUPLING icto=-2 icfrom=1 kind=7 ip1=1 ip2=0 /
-&CFP in=1 ia=1 ib=1 kn=1 a=1.0 /
-&CFP in=2 ia=1 ib=2 kn=2 a=1.0 /
-&CFP in=2 ia=1 ib=3 kn=3 a=1.0 /
-&CFP in=2 ia=1 ib=4 kn=4 a=1.0 /
+&CFP in=1 ia=1 ib=1 kn=1 a=1.41421356237 /
+&CFP in=2 ia=1 ib=2 kn=2 a=1.41421356237 /
+&CFP in=2 ia=1 ib=3 kn=3 a=1.41421356237 /
+&CFP in=2 ia=1 ib=4 kn=4 a=1.41421356237 /
 &coupling /
