--- a/transfer.in
+++ b/transfer.in
@@ -17,10 +17,10 @@ NAMELIST
 &STATES copyp = 1                cpot=2 jt=2 bandt= 1 et=5.958 /
 &partition /
 
-&POT kp=1 type=0 shape=0 ap=11. at=9. rc=1.1555  /
-&POT kp=1 type=1 p1=45.559 p2=1.191 p3=0.56288 p4=0 p5=0 p6=0  /
-&POT kp=1 type=2 p(1:6)= 0.0 0.0 0.0 6.485 1.046 1.1883  /
-&POT kp=1 type=3 p1=6.47  p2=1.15 p3=0.633   /
+&POT kp=1 type=0 shape=0 ap=11. at=9. rc=.62  /
+&POT kp=1 type=1 V=32.35 vr0=1.  a=1./
+&POT kp=1 type=2 W=5.77  wr0=1.37 aw=.36  /
+&pot /
 
 # outgoing scattering 10Be+10Be (kp=2)
 # derived from 12C+10Be elastic scattering at 23.2 MeV
