--- a/transfer.in
+++ b/transfer.in
@@ -25,9 +25,10 @@ NAMELIST
 # outgoing scattering 10Be+10Be (kp=2)
 # derived from 12C+10Be elastic scattering at 23.2 MeV
 # https://journals.aps.org/prc/pdf/10.1103/PhysRevC.84.034611 SEE WS-6
-&POT kp=2 type=0 shape=0 p(1:3)= 10.0 10.0 1.136 /
-&POT kp=2 type=1 shape=0 p(1:6)= 32.35  .89  0.85  5.77  1.37  0.36  /
-&POT kp=2 type=2 shape=0 p(1:6)= 80 .8 .6 0 0 0 /
+&POT kp=1 type=0 shape=0 ap=11. at=9. rc=.62  /
+&POT kp=1 type=1 V=32.35 vr0=.89 a=0.85/
+&POT kp=1 type=2 W=5.77  wr0=1.37 aw=.36  /
+&pot /
 
 # n+9Be (kp=3)
 #https://www-nds.iaea.org/cgi-bin/ripl_om_param.pl?Z=6&A=12&ID=15&E1=30&E2=31
