--- a/transfer.in
+++ b/transfer.in
@@ -18,34 +18,35 @@ NAMELIST
 &partition /
 
 &POT kp=1 type=0 shape=0 ap=11. at=9. rc=.62  /
-&POT kp=1 type=1 V=32.35 vr0=1.  a=1./
-&POT kp=1 type=2 W=5.77  wr0=1.37 aw=.36  /
+&POT kp=1 type=1 V=32.35 vr0=1.0  a=0.85/
+&POT kp=1 type=2 W=5.77  wr0=1.37 aw=.7  /
+&POT kp=1 type=3 vso=5.7 rso=1.15 aso=0.7   /
 &pot /
 
 # outgoing scattering 10Be+10Be (kp=2)
 # derived from 12C+10Be elastic scattering at 23.2 MeV
-# https://journals.aps.org/prc/pdf/10.1103/PhysRevC.84.034611 SEE WS-6
-&POT kp=1 type=0 shape=0 ap=11. at=9. rc=.62  /
-&POT kp=1 type=1 V=32.35 vr0=.89 a=0.85/
-&POT kp=1 type=2 W=5.77  wr0=1.37 aw=.36  /
+# https://journals.aps.org/prc/pdf/10.1103/PhysRevC.84.034611 SEE WS-3
+&POT kp=2 type=0 shape=0 ap=11. at=9. rc=.62  /
+&POT kp=2 type=1 V=60. vr0=1.18  a=0.6/
+&POT kp=2 type=2 W=32.6  wr0=1.18 aw=0.6  /
+&POT kp=2 type=3 vso=5.7 rso=1.15 aso=0.7   /
 &pot /
 
 # n+9Be (kp=3)
 #https://www-nds.iaea.org/cgi-bin/ripl_om_param.pl?Z=6&A=12&ID=15&E1=30&E2=31
-&POT kp=3 type=0 shape=0 p(1:3)= 9.0 1.0 1.136 /
+&POT kp=3 type=0 shape=0 p(1:3)= 0.0 9.0 1.2 /
 &POT kp=3 type=1 shape=0 p(1:6)= 37.4 1.23 0.60 0.0 0.0 0.0  /
-&POT kp=3 type=2 p(1:6)= 0.0 0.0 0.0 6.8 1.23 1.20  /
 &POT kp=3 type=3 shape=0 p(1:6)= 7.0  1.23  0.60 0.0  0.00  0.00  /
 
-&POT kp=4 type=0 shape=0 ap=11. at=9. rc=1.1555  /
-&POT kp=4 type=1 p1=45.559 p2=1.191 p3=0.56288 p4=0 p5=0 p6=0  /
-&POT kp=4 type=3 p1=6.47  p2=1.15 p3=0.633   /
+&POT kp=4 type=0 shape=0 ap=0. at=10. rc=1.2  /
+&POT kp=4 type=1 V=32.35 vr0=1.0  a=0.85/
+&POT kp=4 type=3 vso=5.7 rso=1.15 aso=0.7   /
 &pot /
 
 &OVERLAP kn1=1 ic1=1 ic2=2 in=1 kind=0 nn=2 l=0 j=0.5 sn=0.5 kbpot=4 be=0.501 isc=1 ipc=0 /
-&OVERLAP kn1=2 ic1=1 ic2=2 in=2 kind=3 ia=1 ib=2 nn=2 l=0 j=0.5 sn=0.5 kbpot=4 be=.853 isc=1 ipc=0 /
-&OVERLAP kn1=3 ic1=1 ic2=2 in=2 kind=3 ia=1 ib=3 nn=2 l=0 j=0.5 sn=0.5 kbpot=4 be=.549 isc=1 ipc=0 /
-&OVERLAP kn1=4 kn2=5 ic1=1 ic2=2 in=2 kind=3 ia=1 ib=4 nn=1 l=1 j=1.5 sn=0.5 kbpot=4 be=.854 isc=1 ipc=0 /
+&OVERLAP kn1=2 ic1=1 ic2=2 in=2 kind=3 ia=1 ib=2 nn=2 l=0 j=0.5 sn=0.5 kbpot=3 be=.853 isc=1 ipc=0 /
+&OVERLAP kn1=3 ic1=1 ic2=2 in=2 kind=3 ia=1 ib=3 nn=2 l=0 j=0.5 sn=0.5 kbpot=3 be=.549 isc=1 ipc=0 /
+&OVERLAP kn1=4 kn2=5 ic1=1 ic2=2 in=2 kind=3 ia=1 ib=4 nn=1 l=1 j=1.5 sn=0.5 kbpot=3 be=.854 isc=1 ipc=0 /
 &overlap /
 
 &COUPLING icto=-2 icfrom=1 kind=7 ip1=1 ip2=0 /
