--- a/elastic.in
+++ b/elastic.in
@@ -13,8 +13,7 @@ NAMELIST
 &partition /
 
 &POT kp=1 type=0 shape=0 ap=11. at=9. rc=.63  /
-&POT kp=1 type=1 V=60. vr0=1.18  a=0.6/
-&POT kp=1 type=2 W=32.60 wr0=1.18 aw=.6  /
+&POT kp=1 type=1 V=60. vr0=1.18 a=0.6 W=32.60 wr0=1.18 aw=.6  /
 &POT kp=1 type=3 vso=5.7 rso=1.15 aso=0.7   /
 &pot /
 
