--- a/transfer.in
+++ b/transfer.in
@@ -17,29 +17,25 @@ NAMELIST
 &STATES copyp = 1                cpot=2 jt=2 bandt= 1 et=5.958 /
 &partition /
 
-&POT kp=1 type=0 shape=0 ap=11. at=9. rc=.62  /
-&POT kp=1 type=1 V=32.35 vr0=1.0  a=0.85/
-&POT kp=1 type=2 W=5.77  wr0=1.37 aw=.7  /
+&POT kp=1 type=0 shape=0 ap=11. at=9. rc=.63  /
+&POT kp=1 type=1 V=60. vr0=1.4 a=0.9 W=35 wr0=1.3 aw=.9  /
 &POT kp=1 type=3 vso=5.7 rso=1.15 aso=0.7   /
-&pot /
 
 # outgoing scattering 10Be+10Be (kp=2)
 # derived from 12C+10Be elastic scattering at 23.2 MeV
 # https://journals.aps.org/prc/pdf/10.1103/PhysRevC.84.034611 SEE WS-3
 &POT kp=2 type=0 shape=0 ap=11. at=9. rc=.62  /
-&POT kp=2 type=1 V=60. vr0=1.18  a=0.6/
-&POT kp=2 type=2 W=32.6  wr0=1.18 aw=0.6  /
+&POT kp=2 type=1 V=60. vr0=1.18  a=0.6  W=32.6  wr0=1.18 aw=0.6  /
 &POT kp=2 type=3 vso=5.7 rso=1.15 aso=0.7   /
-&pot /
 
 # n+9Be (kp=3)
 #https://www-nds.iaea.org/cgi-bin/ripl_om_param.pl?Z=6&A=12&ID=15&E1=30&E2=31
-&POT kp=3 type=0 shape=0 p(1:3)= 0.0 9.0 1.2 /
-&POT kp=3 type=1 shape=0 p(1:6)= 37.4 1.23 0.60 0.0 0.0 0.0  /
-&POT kp=3 type=3 shape=0 p(1:6)= 7.0  1.23  0.60 0.0  0.00  0.00  /
+&POT kp=3 type=0 shape=0 ap=0. at=9.0 rc=1.2 /
+&POT kp=3 type=1 shape=0 V=37.4 vr0=1.23 a=0.60 /
+&POT kp=3 type=3 vso=7. rso=1.23 aso=0.6   /
 
-&POT kp=4 type=0 shape=0 ap=0. at=10. rc=1.2  /
-&POT kp=4 type=1 V=32.35 vr0=1.0  a=0.85/
+&POT kp=4 type=0 shape=0 ap=0. at=10. rc=.63  /
+&POT kp=4 type=1 V=60. vr0=1.4 a=0.9   /
 &POT kp=4 type=3 vso=5.7 rso=1.15 aso=0.7   /
 &pot /
 
