removed imaginary from kp2

--- a/transfer.in
+++ b/transfer.in
@@ -25,7 +25,7 @@ NAMELIST
 # derived from 12C+10Be elastic scattering at 23.2 MeV
 # https://journals.aps.org/prc/pdf/10.1103/PhysRevC.84.034611 SEE WS-3
 &POT kp=2 type=0 shape=0 ap=11. at=9. rc=.62  /
-&POT kp=2 type=1 V=60. vr0=1.18  a=0.6  W=32.6  wr0=1.18 aw=0.6  /
+&POT kp=2 type=1 V=60. vr0=1.18  a=0.6  /
 &POT kp=2 type=3 vso=5.7 rso=1.15 aso=0.7   /
 
 # n+9Be (kp=3)
