--- a/transfer.in
+++ b/transfer.in
@@ -18,7 +18,7 @@ NAMELIST
 &partition /
 
 &POT kp=1 type=0 shape=0 ap=11. at=9. rc=.63  /
-&POT kp=1 type=1 V=60. vr0=1.4 a=0.9 W=35 wr0=1.3 aw=.9  /
+&POT kp=1 type=1 V=58. vr0=1.4 a=0.9 W=41. wr0=1.3 aw=.9  /
 &POT kp=1 type=3 vso=5.7 rso=1.15 aso=0.7   /
 
 # outgoing scattering 10Be+10Be (kp=2)
@@ -34,8 +34,8 @@ NAMELIST
 &POT kp=3 type=1 shape=0 V=37.4 vr0=1.23 a=0.60 /
 &POT kp=3 type=3 vso=7. rso=1.23 aso=0.6   /
 
-&POT kp=4 type=0 shape=0 ap=0. at=10. rc=.63  /
-&POT kp=4 type=1 V=60. vr0=1.4 a=0.9   /
+&POT kp=4 type=0 shape=0 ap=0. at=11. rc=.63  /
+&POT kp=4 type=1 V=58. vr0=1.4 a=0.9 /
 &POT kp=4 type=3 vso=5.7 rso=1.15 aso=0.7   /
 &pot /
 
